--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,11 +4,13 @@ $colorMenu: rgba(25, 0, 0, 0.50);;
 $colorMenuInvertido: '';
 
 $colorPrincipal: #AC0000;
-$colorSegundario: '';
+$colorSegundario: #48060A;
 $colorButton:#AC0000;
 $colorButtonHover:#FFF;
+$colorButtonHoverOpcional:#620000;
 $colorTextB: #FFFAF7;
 $colorTextN: #1E1E1E;
+$colorTextNAlternativo: #343434;
 
 $breakpoints: (
   "none": 0px, 
