--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,24 @@
   border-radius: 20px;
 }
 
+.btn-servicios {
+  width: 459px !important;
+  height: auto !important;
+  background-color: #AC0000 !important;
+  color: #FFFAF7 !important;
+  border-radius: 50px !important;
+  border: none !important;
+  cursor: pointer !important;
+  padding: 20px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.btn-servicios:hover {
+  background-color: #FFF !important;
+  color: #1E1E1E !important;
+}
+
 .container-cursos {
   width: 100%;
   height: "";
@@ -406,7 +424,7 @@
   align-self: stretch;
 }
 
-.btn-card {
+.btn-curso {
   width: auto !important;
   height: auto !important;
   background-color: #AC0000 !important;
@@ -419,9 +437,202 @@
   align-items: center;
   gap: 10px;
 }
-.btn-card:hover {
+.btn-curso:hover {
   background-color: #620000 !important;
   color: #FFFAF7 !important;
+}
+
+.container__invitaciones {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 85px 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: normal;
+}
+.container__invitaciones h2 {
+  font-family: "Poppins";
+  font-size: 60px !important;
+  color: #1E1E1E !important;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0px;
+  margin-bottom: 20px;
+}
+
+.container__invitaciones--contenido {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 0pc;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: normal;
+}
+
+.container__invitaciones--text {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 10px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  font-family: "Poppins";
+  font-size: 20px !important;
+  color: #343434 !important;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin: 0px;
+  margin: 0px;
+}
+.container__invitaciones--text p {
+  font-family: "Poppins";
+  font-size: 25px !important;
+  color: #343434 !important;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin: 0px;
+}
+
+.btn-invitaciones {
+  width: 459px !important;
+  height: auto !important;
+  background-color: #AC0000 !important;
+  color: #FFFAF7 !important;
+  border-radius: 50px !important;
+  border: none !important;
+  cursor: pointer !important;
+  padding: 20px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.btn-invitaciones:hover {
+  background-color: #FFF !important;
+  color: #1E1E1E !important;
+}
+
+.container__libros {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 85px 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: normal;
+}
+.container__libros h2 {
+  font-family: "Poppins";
+  font-size: 69px !important;
+  color: #FFFAF7 !important;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0px;
+  margin-bottom: 20px;
+}
+.container__libros p {
+  font-family: "Poppins";
+  font-size: 30px !important;
+  color: #FFFAF7 !important;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin: 0px;
+  margin: 0px;
+}
+
+.container__libros--compra--cards {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 40px 60px;
+  display: flex;
+  flex-direction: row !important;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+.container__libros--descarga--cards {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 40px 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+.container__libros--card {
+  width: 400px;
+  height: auto;
+  display: flex;
+  gap: 20px;
+  padding: 40px 60px;
+  display: flex;
+  flex-direction: column !important;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 30px;
+}
+.container__libros--card h3 {
+  font-family: "Poppins";
+  font-size: 15px !important;
+  color: #FFFAF7 !important;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0px;
+}
+.container__libros--card img {
+  width: 100%;
+  height: auto;
+  border-radius: 20px;
+  align-self: stretch;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+}
+
+.librosDescargaSwiper {
+  width: 100%;
+  min-height: 350px;
+}
+.librosDescargaSwiper .swiper-pagination-bullet {
+  background: #FFFAF7 !important;
+  opacity: 0.5;
+  width: 18px !important;
+  height: 18px !important;
+  margin: 0 6px !important;
+}
+.librosDescargaSwiper .swiper-pagination-bullet-active {
+  background: #AC0000 !important;
+  opacity: 1;
+  width: 18px !important;
+  height: 18px !important;
+  margin: 0 6px !important;
 }
 
 * {
@@ -455,14 +666,22 @@ html {
   background-position: center;
 }
 
+#invitaciones {
+  background: linear-gradient(279deg, #FCF2E1 -21.31%, #FFFAF7 77.82%);
+  background: linear-gradient(279deg, color(display-p3 0.9804 0.949 0.8902) -21.31%, color(display-p3 0.9961 0.9804 0.9686) 77.82%);
+}
+
 #cursos {
   background: linear-gradient(279deg, #FCF2E1 -21.31%, #FFFAF7 77.82%);
   background: linear-gradient(279deg, color(display-p3 0.9804 0.949 0.8902) -21.31%, color(display-p3 0.9961 0.9804 0.9686) 77.82%);
 }
 
 #libros {
-  background: linear-gradient(279deg, #FCF2E1 -21.31%, #FFFAF7 77.82%);
-  background: linear-gradient(279deg, color(display-p3 0.9804 0.949 0.8902) -21.31%, color(display-p3 0.9961 0.9804 0.9686) 77.82%);
+  background-image: url("../img/Backlibros.webp");
+  background-size: cover;
+  background-position: center;
+  background-size: cover;
+  background-position: center;
 }
 
 #videos {
