Se corrige btn-card 1/06/2025

--- a/scss/_contenedores.scss
+++ b/scss/_contenedores.scss
@@ -236,6 +236,15 @@
     
 }
 
+.btn-card{
+     @include button(auto,auto, 50px, #AC0000, $colorTextB, $colorButtonHoverOpcional,$colorTextB);
+    padding: 20px 30px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    
+}
+
 .container__invitaciones{
     @include containers(100%,auto, flex, 0px, 85px 60px, column, center, normal); 
     h2{
