--- a/css/styles.css
+++ b/css/styles.css
@@ -442,6 +442,24 @@
   color: #FFFAF7 !important;
 }
 
+.btn-card {
+  width: auto !important;
+  height: auto !important;
+  background-color: #AC0000 !important;
+  color: #FFFAF7 !important;
+  border-radius: 50px !important;
+  border: none !important;
+  cursor: pointer !important;
+  padding: 20px 30px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.btn-card:hover {
+  background-color: #620000 !important;
+  color: #FFFAF7 !important;
+}
+
 .container__invitaciones {
   width: 100%;
   height: auto;
