--- a/scss/_maquetado.scss
+++ b/scss/_maquetado.scss
@@ -39,8 +39,8 @@ html {
 }
 
 #videos{
-    background: #200000;
-    background: color(display-p3 0.1115 0.0004 0.0004);
+    background: linear-gradient(279deg, #FCF2E1 -21.31%, #FFFAF7 77.82%);
+    background: linear-gradient(279deg, color(display-p3 0.9804 0.949 0.8902) -21.31%, color(display-p3 0.9961 0.9804 0.9686) 77.82%);
 }
 
 #footer{
