--- a/css/styles.css
+++ b/css/styles.css
@@ -91,12 +91,12 @@
   width: 100%;
   height: 100dvh;
   display: flex;
-  gap: "0px";
-  padding: "0px";
+  gap: 0px;
+  padding: 0px;
   display: flex;
-  flex-direction: "column";
-  justify-content: "center";
-  align-items: "center";
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0px;
 }
 
@@ -635,7 +635,7 @@
 }
 
 .librosDescargaSwiper {
-  width: 100%;
+  width: 90%;
   min-height: 350px;
 }
 .librosDescargaSwiper .swiper-pagination-bullet {
@@ -651,6 +651,105 @@
   width: 18px !important;
   height: 18px !important;
   margin: 0 6px !important;
+}
+
+.container__videos {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 85px 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.container__videos--text {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.container__videos--text h2 {
+  font-family: "Poppins";
+  font-size: 60px !important;
+  color: #1E1E1E !important;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0px;
+  margin-bottom: 20px;
+}
+.container__videos--text p {
+  font-family: "Poppins";
+  font-size: 20px !important;
+  color: #343434 !important;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin: 0px;
+  padding-bottom: 10px;
+  margin: 0px;
+}
+
+.container__videos--principal {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 40px 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.container__videos--principal iframe {
+  width: 100%;
+  height: 400px;
+  border-radius: 11.164px;
+}
+
+.videosSwiper {
+  width: 100%;
+}
+
+.container__videos--card {
+  width: 460px !important;
+  height: 310px !important;
+  display: flex;
+  gap: 0px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column !important;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-radius: 30px;
+  background: #FFF;
+  background: color(display-p3 1 1 1);
+  box-shadow: 0px 4px 54px 0px rgba(46, 0, 0, 0.1);
+  box-shadow: 0px 4px 54px 0px color(display-p3 0.1608 0 0 / 0.1);
+}
+.container__videos--card h3 {
+  font-family: "Poppins";
+  font-size: 15px !important;
+  color: #1E1E1E !important;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0px;
+}
+.container__videos--card iframe {
+  width: 100%;
+  height: 220px !important;
+  border-radius: 10px;
+  align-self: stretch;
 }
 
 * {
@@ -703,8 +802,8 @@ html {
 }
 
 #videos {
-  background: #200000;
-  background: color(display-p3 0.1115 0.0004 0.0004);
+  background: linear-gradient(279deg, #FCF2E1 -21.31%, #FFFAF7 77.82%);
+  background: linear-gradient(279deg, color(display-p3 0.9804 0.949 0.8902) -21.31%, color(display-p3 0.9961 0.9804 0.9686) 77.82%);
 }
 
 #footer {
