--- a/css/styles.css
+++ b/css/styles.css
@@ -91,12 +91,12 @@
   width: 100%;
   height: 100dvh;
   display: flex;
-  gap: 0px;
-  padding: 0px;
+  gap: 10px;
+  padding: 52px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   margin: 0px;
 }
 
@@ -752,6 +752,190 @@
   align-self: stretch;
 }
 
+.container__contacto {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 85px 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.container__contacto--text {
+  width: 50%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 40px 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  font-family: "Poppins";
+  font-size: 20px !important;
+  color: #343434 !important;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  margin: 0px;
+}
+.container__contacto--text h2 {
+  font-family: "Poppins";
+  font-size: 60px !important;
+  color: #1E1E1E !important;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0px;
+  margin-bottom: 20px;
+}
+.container__contacto--text p {
+  margin: 0px;
+}
+
+.container__contacto--redesSociales {
+  padding-top: 20px;
+}
+
+.container__contacto--redSocial {
+  font-family: "Poppins";
+  font-size: 60px !important;
+  color: #1E1E1E !important;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0px;
+  text-align: center;
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  text-decoration: none;
+  padding: 10px;
+}
+.container__contacto--redSocial h4 {
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+  margin: 0px;
+}
+.container__contacto--redSocial div {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.container__contacto--redSocial:hover {
+  color: #1E1E1E;
+  text-decoration: none;
+}
+.container__contacto--redSocial:hover svg {
+  fill: #1E1E1E;
+}
+
+.container__contacto--form {
+  width: 40%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  border-radius: 20px;
+  background: #FFF;
+  background: color(display-p3 1 1 1);
+  box-shadow: 0px 4px 54px 0px rgba(46, 0, 0, 0.1);
+  box-shadow: 0px 4px 54px 0px color(display-p3 0.1608 0 0 / 0.1);
+}
+
+input.form-control, select.form-select {
+  display: flex;
+  height: 52px !important;
+  padding: 10px 20px !important;
+  align-items: center !important;
+  gap: 20px !important;
+  align-self: stretch !important;
+  border: none !important;
+  border-radius: 20px !important;
+  background: #FCECE7 !important;
+  background: color(display-p3 0.9793 0.9289 0.9073) !important;
+}
+
+textarea.form-control {
+  display: block !important;
+  width: 100% !important;
+  resize: vertical;
+  border: none !important;
+  border-radius: 20px !important;
+  background: #FCECE7 !important;
+  background: color(display-p3 0.9793 0.9289 0.9073) !important;
+}
+
+.form-control::placeholder {
+  color: #343434;
+  color: color(display-p3 0.2039 0.2039 0.2039);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+}
+
+.btn-submit {
+  width: #48060A !important;
+  height: #1E1E1E !important;
+  background-color: #AC0000 !important;
+  color: #FFFAF7 !important;
+  border-radius: 10px 90px !important;
+  border: none !important;
+  cursor: pointer !important;
+  font-family: Montserrat;
+  font-size: 20px !important;
+  color: normal !important;
+  font-style: 400;
+  font-weight: normal;
+  line-height: #1E1E1E;
+  margin: 0px;
+}
+.btn-submit:hover {
+  background-color: #FFF !important;
+  color: #1E1E1E !important;
+}
+
+.form-footer {
+  display: flex;
+  padding: 10px 30px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 50px;
+  border-radius: 0px 0px 50px 50px;
+  border: 1px solid #FFFAF7;
+  border: 1px solid color(display-p3 1 1 1);
+  background: rgba(255, 255, 255, 0.5);
+  background: color(display-p3 1 1 1 / 0.5);
+}
+
+.container__footer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  gap: 0px;
+  padding: 85px 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container__footer--logo {
+  width: 134px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -802,6 +986,15 @@ html {
 }
 
 #videos {
+  background: linear-gradient(279deg, #FCF2E1 -21.31%, #FFFAF7 77.82%);
+  background: linear-gradient(279deg, color(display-p3 0.9804 0.949 0.8902) -21.31%, color(display-p3 0.9961 0.9804 0.9686) 77.82%);
+  padding-bottom: 60px;
+  /*  @include container_img('../img/backVideos.webp');
+   background-size: cover;
+   background-position: center; */
+}
+
+#contacto {
   background: linear-gradient(279deg, #FCF2E1 -21.31%, #FFFAF7 77.82%);
   background: linear-gradient(279deg, color(display-p3 0.9804 0.949 0.8902) -21.31%, color(display-p3 0.9961 0.9804 0.9686) 77.82%);
 }
